--- a/Share Beauty App/Views/UtmMask/UtmMaskEfficacyView.xib
+++ b/Share Beauty App/Views/UtmMask/UtmMaskEfficacyView.xib
@@ -26,9 +26,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F7J-zq-MfD">
                             <rect key="frame" x="0.0" y="0.0" width="1024" height="2052"/>
                             <subviews>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZjI-ky-wYo">
-                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZjI-ky-wYo">
+                                    <rect key="frame" x="0.0" y="513" width="1024" height="513"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="utm_mask_efficacy_graph.png" translatesAutoresizingMaskIntoConstraints="NO" id="lqV-ZV-7E2">
                                             <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
@@ -37,18 +36,59 @@
                                                 <bool key="isElement" value="YES"/>
                                             </accessibility>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="When the mask is used within 72 hours of exposure to stress, it truly prevents skin damage!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bTN-5V-tz5">
-                                            <rect key="frame" x="29" y="21" width="708" height="64"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="When the mask is used within 72 hours of exposure to stress, it truly prevents skin damage!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bTN-5V-tz5">
+                                            <rect key="frame" x="30" y="30" width="700" height="46"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="700" id="nqK-Av-pDt"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="23"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JMG-bK-Rf4">
+                                            <rect key="frame" x="120" y="161" width="480" height="240"/>
+                                            <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="240" id="0QM-GP-K8Z"/>
+                                                <constraint firstAttribute="width" constant="480" id="Q79-q4-3wT"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C9G-Xd-ZVL" userLabel="Direction ImageV">
+                                            <rect key="frame" x="85" y="361" width="30" height="30"/>
+                                            <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="MzY-3p-hGo"/>
+                                                <constraint firstAttribute="width" constant="30" id="Vki-md-si6"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kbx-d3-20Z" userLabel="Item ImageV">
+                                            <rect key="frame" x="699" y="100" width="240" height="200"/>
+                                            <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="240" id="56X-55-Z2n"/>
+                                                <constraint firstAttribute="height" constant="200" id="H77-UF-LOm"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="JMG-bK-Rf4" firstAttribute="leading" secondItem="ZjI-ky-wYo" secondAttribute="leading" constant="120" id="0kI-0u-TmK"/>
+                                        <constraint firstItem="Kbx-d3-20Z" firstAttribute="top" secondItem="ZjI-ky-wYo" secondAttribute="top" constant="100" id="1gp-Gn-Bib"/>
+                                        <constraint firstAttribute="height" constant="513" id="AAh-gx-L3Q"/>
+                                        <constraint firstItem="bTN-5V-tz5" firstAttribute="top" secondItem="ZjI-ky-wYo" secondAttribute="top" constant="30" id="Ci3-Pq-iSg"/>
+                                        <constraint firstItem="JMG-bK-Rf4" firstAttribute="leading" secondItem="C9G-Xd-ZVL" secondAttribute="trailing" constant="5" id="OT9-fq-924"/>
+                                        <constraint firstItem="JMG-bK-Rf4" firstAttribute="bottom" secondItem="C9G-Xd-ZVL" secondAttribute="bottom" constant="10" id="jd1-dW-OLF"/>
+                                        <constraint firstAttribute="trailing" secondItem="Kbx-d3-20Z" secondAttribute="trailing" constant="85" id="oy3-UT-bXU"/>
+                                        <constraint firstItem="JMG-bK-Rf4" firstAttribute="top" secondItem="bTN-5V-tz5" secondAttribute="bottom" constant="85" id="xTl-qH-EhT"/>
+                                        <constraint firstItem="bTN-5V-tz5" firstAttribute="leading" secondItem="ZjI-ky-wYo" secondAttribute="leading" constant="30" id="yfx-dU-m4L"/>
+                                    </constraints>
                                 </view>
                             </subviews>
                             <constraints>
                                 <constraint firstAttribute="height" constant="2052" id="Ah7-MG-E1T"/>
+                                <constraint firstItem="ZjI-ky-wYo" firstAttribute="leading" secondItem="F7J-zq-MfD" secondAttribute="leading" id="Pma-xi-MhT"/>
+                                <constraint firstAttribute="trailing" secondItem="ZjI-ky-wYo" secondAttribute="trailing" id="XnF-Bm-jHr"/>
+                                <constraint firstItem="ZjI-ky-wYo" firstAttribute="top" secondItem="F7J-zq-MfD" secondAttribute="top" constant="513" id="Y7L-Tu-luy"/>
+                                <constraint firstItem="ZjI-ky-wYo" firstAttribute="width" secondItem="F7J-zq-MfD" secondAttribute="width" id="zqd-aa-NE0"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -71,6 +111,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="mContentView" destination="F7J-zq-MfD" id="Pxv-Oa-Sfr"/>
+                <outlet property="mGraphImageV" destination="JMG-bK-Rf4" id="0qL-Wj-3U5"/>
                 <outlet property="mGraphV" destination="ZjI-ky-wYo" id="fr6-NF-FZE"/>
                 <outlet property="mScrollV" destination="op4-Fg-9Bv" id="trF-Rq-S0d"/>
                 <outlet property="mTitleLabel" destination="bTN-5V-tz5" id="exk-BV-fsA"/>
