--- a/Share Beauty App/Views/Waso/Mochi/WasoMochiTechView.xib
+++ b/Share Beauty App/Views/Waso/Mochi/WasoMochiTechView.xib
@@ -26,10 +26,6 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QCK-dp-LdP">
                     <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mochi_tech.png" translatesAutoresizingMaskIntoConstraints="NO" id="ELI-dZ-pow">
-                            <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Efficacy Results" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyf-V8-hva">
                             <rect key="frame" x="30" y="30" width="178" height="23"/>
                             <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="23"/>
@@ -45,9 +41,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AzS-1n-c5q">
+                        <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AzS-1n-c5q">
                             <rect key="frame" x="200" y="130" width="624" height="363"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                     </subviews>
                     <constraints>
@@ -77,7 +72,4 @@
             </connections>
         </view>
     </objects>
-    <resources>
-        <image name="mochi_tech.png" width="1891" height="963"/>
-    </resources>
 </document>
