--- a/Share Beauty App/Views/Waso/Mochi/WasoMochiUsageView.xib
+++ b/Share Beauty App/Views/Waso/Mochi/WasoMochiUsageView.xib
@@ -15,16 +15,21 @@
             <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mochi_usage.png" translatesAutoresizingMaskIntoConstraints="NO" id="0FU-hf-CbG">
-                    <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mochi_usage.png" translatesAutoresizingMaskIntoConstraints="NO" id="nUn-if-oQu">
+                    <rect key="frame" x="654" y="110" width="200" height="343"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="nUn-if-oQu" secondAttribute="bottom" constant="60" id="KBd-pV-ksF"/>
+                <constraint firstAttribute="trailing" secondItem="nUn-if-oQu" secondAttribute="trailing" constant="170" id="r3a-7J-jWa"/>
+                <constraint firstItem="nUn-if-oQu" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="110" id="tMl-ds-lpc"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="34" y="53.5"/>
         </view>
     </objects>
     <resources>
-        <image name="mochi_usage.png" width="1024" height="513"/>
+        <image name="mochi_usage.png" width="200" height="420"/>
     </resources>
 </document>
